Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.10-dev-161-g85037eb https://github.com/reactos/reactos/commit/85037eb74503634e8c16f489f70faa926f7c32a6
Description
This regression appears when try to delete any file or folder by right click on the object and then "delete". After doing this, nothing happens.
It is present in ROS since the 85037eb commit (0.4.10-dev-161), after syncing ole32 with Wine-Staging 3.9. SeeĀ 85037eb (161).webm In 9ce306e (0.4.10-dev-160) deleting works correctly.
UPD: Retested with BootCD. See 85037eb.log.
Attachments
Issue Links
- blocks
-
CORE-14656 Syncing ReactOS with Wine Staging 3.9
-
- Resolved
-
- is duplicated by
-
CORE-14721 Can't delete file\folder in explorer
-
- Resolved
-
-
CORE-14733 Unable to delete Files
-
- Resolved
-
-
CORE-14863 file deletion is not working
-
- Resolved
-
-
CORE-15254 Unable to delete files (to Recycle Bin)
-
- Resolved
-
-
CORE-15357 File deletion not working
-
- Resolved
-
-
CORE-15377 Right click>Delete on a file still fails
-
- Resolved
-
- relates to
-
CORE-13772 Drag&Drop - Dragging may lead to sporadic explorer process crash
-
- Open
-
-
CORE-13788 Pasting an item in the same folder it was copied from, should duplicate with a new name
-
- Resolved
-