[0.4.11] [SHELL32] Avoid regression CORE-14696

"It was not longer possible to delete any file or folder via context menu"

By applying the workaround from Doug Lyons and sraboy, slightly adapted.